--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,9 +1,12 @@
 @import url('http://fonts.googleapis.com/css?family=Roboto+Slab|Merriweather|Josefin+Slab|Oswald|Bree+Serif');
 
+// @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600&family=Kiwi+Maru&display=swap');
+
 $originalFont:Georgia, serif;
 $originalGreen:#538b5a;
 $originalBlue:#1686C1;
-$originalBrown:#852406;
+$originalBrown:rgb(93, 41, 11);
+$originalLightBrown: #6f3f06;
 $originalPurple:#6D73C2;
 $originalDarkBlue:#0076A3;
 $originalNavyBlue:rgb(50,50,70);
